fix: clubService 조회 과정 쿼리로 대체